# libgitpp

./: CMakeLists.txt
src/: CMakeLists.txt  branch.cpp  branch.h  commit.cpp  commit.h  diff.cpp  diff.h  gittime.cpp  gittime.h  index.cpp  index.h  indexentry.cpp  indexentry.h  libgitpp.pc.in  libgitpp_global.h  oid.cpp  oid.h  print.cpp  print.h  reference.cpp  reference.h  repository.cpp  repository.h  revwalk.cpp  revwalk.h  signature.cpp  signature.h
tests/: CMakeLists.txt  open_repo.cpp
